// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AVPlayer for Live Radio should match snapshot for canonical AVPlayer 1`] = `
.c0 {
  padding-top: 56.25%;
  position: relative;
  overflow: hidden;
  margin-bottom: 1rem;
}

.c1 {
  border: 0;
  left: 0;
  overflow: hidden;
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
}

@media (min-width:63rem) {
  .c0 {
    margin-bottom: 1.5rem;
  }
}

<div
  class=""
>
  <div
    class="c0"
  >
    <iframe
      allow="autoplay; fullscreen"
      allowfullscreen=""
      class="c1"
      scrolling="no"
      src="https://test.bbc.com/ws/av-embeds/media/bbc_korean_radio/liveradio/ko"
      title="오디오 플레이어"
    />
    <noscript />
  </div>
</div>
`;

exports[`AVPlayer for On Demand Radio should match snapshot for AMP AVPlayer 1`] = `
.c0 {
  padding-top: 56.25%;
  position: relative;
  overflow: hidden;
  margin-bottom: 1rem;
}

@media (min-width:63rem) {
  .c0 {
    margin-bottom: 1.5rem;
  }
}

<html>
  <head>
    <script
      async="true"
      custom-element="amp-iframe"
      src="https://cdn.ampproject.org/v0/amp-iframe-0.1.js"
    />
  </head>
  <body>
    <div>
      <div
        class=""
      >
        <div
          class="c0"
        >
          <amp-iframe
            allowfullscreen="allowfullscreen"
            frameborder="0"
            layout="fill"
            sandbox="allow-scripts allow-same-origin"
            scrolling="no"
            src="https://polling.test.bbc.co.uk/ws/av-embeds/media/afaanoromoo/bbc_afaanoromoo_radio/w3ct0l8r/om/amp"
            title="Audio player"
          >
            <amp-img
              alt=""
              attribution=""
              height="16"
              layout="fill"
              placeholder="true"
              src="https://ichef.bbci.co.uk/images/ic/1024x576/p063j1dv.jpg"
              width="9"
            />
            <noscript />
          </amp-iframe>
        </div>
      </div>
    </div>
  </body>
</html>
`;

exports[`AVPlayer for On Demand TV should match snapshot for canonical AVPlayer 1`] = `
.c0 {
  padding-top: 56.25%;
  position: relative;
  overflow: hidden;
  margin-bottom: 1rem;
}

.c1 {
  border: 0;
  left: 0;
  overflow: hidden;
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
}

@media (min-width:63rem) {
  .c0 {
    margin-bottom: 1.5rem;
  }
}

<div
  class=""
>
  <div
    class="c0"
  >
    <iframe
      allow="autoplay; fullscreen"
      allowfullscreen=""
      class="c1"
      scrolling="no"
      src="https://test.bbc.com/ws/av-embeds/media/pashto/bbc_pashto_tv/w172xcldhhrdqgb/ps?morph_env=live"
      title="ویډیو پلیئر"
    />
    <noscript />
  </div>
</div>
`;
